<resources>
    <string name="app_name">SemMii</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="leer_japans">Leer Japans</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gun_bierie">Gun bierie</string>
    <string name="lekker_dansen">Lekker Dansen</string>
    <string name="tukkie_doen">Tukkie Doen</string>
    <string name="wakker_maken">Wakker Maken</string>
    <string name="ping_pong">Ping pong enorm lange zin broertje</string>
    <string name="dorst">Dorst</string>
    <string name="japans">Japans</string>
    <string name="moeheid">Moeheid</string>
</resources>